# asciidoctor-action

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.html  README.md  action.yml  entrypoint.sh  file.html  index.html  package.json  pyproject.toml  run-locally.sh
.asciidoctor/diagram/: .svg.cache  diag-0548e1e27314484724d9e8c4f288980f.svg.cache  diag-23bc6df78e3ba83214bbfd8867125c54.png.cache  diag-5b468197eec0c802477ba19003b19a07.png.cache  diag-5b468197eec0c802477ba19003b19a07.svg.cache  diag-611f68764969a9384067d76693b54072.svg.cache  diag-756ab0d499451afbf9e9ec50708f844c.png.cache  diag-944a414ae9618fe88f360339695d3855.png.cache  diag-a73edf1e9294b9633bfc8b2590a86c4f.png.cache  diagram-classes.svg.cache  svg.png.cache
.github/workflows/: adocs-build.yml
docs/: diagram.py  file.adoc  file.html  index.adoc  index.html
