[tool.poetry]
name = "asciidoctor-action"
version = "1.2.0"
description = "A GitHub Action for rendering AsciiDoc, and deploy it as GitHub Pages"
authors = ["Sindre Nistad <snis@equinor.com>", "Eirik Ola Aksnes <eaks@equinor.com>", "Arvid Gräns <KAG@equinor.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
